<?xml version="1.0"?>
<package format="2">
  <name>ufomap</name>
  <version>1.0.0</version>
  <description>The ufomap package</description>

  <author email="dduberg@kth.se">Daniel Duberg</author>
  <maintainer email="dduberg@kth.se">Daniel Duberg</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/danielduberg/ufomap</url>

  <buildtool_depend>cmake</buildtool_depend>
  <depend>lz4</depend>
  <depend>tbb</depend>
  
  <doc_depend>doxygen</doc_depend>

  <export>
    <build_type>cmake</build_type>
    <member_of_group>ufomap_ros2</member_of_group>
  </export>
</package>
