<?xml version="1.0"?>
<package format="3">
  <name>ufomap_conversions</name>
  <version>1.0.0</version>
  <description>The ufomap_conversions package</description>

  <maintainer email="connortynan16@gmail.com">Connor Tynan</maintainer>
  <author email="connortynan16@gmail.com">Connor Tynan</author>

  <license>BSD</license>

  <url type="website">https://github.com/connortynan/ufomap_ros2</url>

  <!-- Build tool for ROS 2 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Package dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <depend>ufomap_msgs</depend>

  <!-- Non-ROS dependencies -->
  <depend>ufomap</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <member_of_group>ufomap_ros2</member_of_group>
  </export>
</package>
