<?xml version="1.0"?>
<package format="3">
  <name>ufomap_mapping</name>
  <version>1.0.0</version>
  <description>The ufomap_mapping package</description>

  <maintainer email="connortynan16@gmail.com">Connor Tynan</maintainer>
  <author email="connortynan16@gmail.com">Connor Tynan</author>

  <license>BSD</license>

  <url type="website">https://github.com/connortynan/ufomap_ros2</url>

  <!-- Build tool for ROS 2 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Package dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>diagnostic_msgs</depend>

  <depend>ufomap_msgs</depend>
  <depend>ufomap_ros</depend>

  <!-- Non-ROS dependencies -->
  <depend>ufomap</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
