<?xml version="1.0"?>
<package format="3">
  <name>ufomap_rviz_plugins</name>
  <version>1.0.0</version>
  <description>The ufomap_rviz_plugins package</description>

  <maintainer email="connortynan16@gmail.com">Connor Tynan</maintainer>
  <author email="connortynan16@gmail.com">Connor Tynan</author>

  <license>BSD</license>

  <url type="website">https://github.com/connortynan/ufomap_ros2</url>

  <!-- Build tool for ROS 2 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Package dependencies -->
  <depend>rclcpp</depend> <!-- Replaces roscpp in ROS 2 -->
  <depend>rviz_default_plugins</depend> <!-- Replaces rviz -->
  <depend>ufomap_msgs</depend>
  <depend>ufomap_ros</depend>

  <!-- ROS 2 Qt dependencies -->
  <depend>Qt5Core</depend>
  <depend>Qt5Widgets</depend>

  <!-- Non-ROS dependencies -->
  <build_depend>ufomap</build_depend>

  <!-- Documentation dependencies -->
  <doc_depend>doxygen</doc_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz_plugin path="${prefix}/plugin_description.xml"/>
  </export>
</package>
